corrección error de logo-tipo

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ left: 34.66204506065858vh;
     opacity: 1;
     color: black;
     border-radius: 5px 0vh 0vh 5px ;
-    background-image: url(/img/Grupo\ 14423.png);
+    background-image: url(./img/Grupo\ 14423.png);
     background-repeat: no-repeat;
 }
 .section_tarjet{
