--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Orbitron:wght@900&family=Work+Sans:wght@100;500;700&display=swap");
 *{
     padding: 0%;
     margin: 0%;
     
-   
-
 }
 h1{
 color: rgb(255, 255, 255);
@@ -21,14 +20,24 @@ height: 24.5vh;
 position: absolute;
 margin-top: 9vh;
 background: rgba(255, 255, 255, 0);
-
 top: 22.69844020797227vh;
 left: 34.66204506065858vh;
 }
+i{
+width: 76px;
+height: 18px;
+opacity: 1;
+color: #EAEAEA;
+font-family: "Lato",sans-serif;
+font-style: normal;
+margin-right: 3.84204909284952vh;
+margin-left: 3.84204909284952vh;
+}
+
+ /* seccion header */
 
 .header{
-    top: 0px;
-    left: 0px;
+   
     width: 100%;
     height: 12.06vh;
     opacity:1;
@@ -37,34 +46,102 @@ left: 34.66204506065858vh;
     align-content: center;
     align-items: center;
     display: flex;
-    background: rgba(0, 0, 255, 0.548);
-    opacity: 1;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 99;
+    background: rgba(210, 210, 218, 0.192);
 }
-.section1{
-   height: 100vh;
-   width: 100%;
-   background: rgba(0, 0, 0, 0);
-   margin-bottom: 10.7vh;
-   position: absolute;
-}
-
- /* UI Properties */
 .boxName{
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 100%;
     width: 35%;
-    align-content: center;
+}
+.name{
+    width: 31.19584055459272vh;
+    height: 6.065857885615252vh;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    
 }
 .boxbutton{
     height: 100%;
     width: 65%;
     display:inline-flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: center;   
 }
+.boxButton1{
+    justify-content: flex-end;
+    display: flex;
+    width: 65%;  
+}
+.boxButoon2{
+    height: 100%;
+    width: 35%;
+    align-items: center;
+    display: flex;
+    margin-right: 3.84204909284952vh;
+    margin-left: 3.84204909284952vh;   
+}
+.contacButton{
+    position: absolute;
+    background-color: rgba(0, 0, 255, 0);
+    width: 135px;
+    height: 47px;
+    border: 1px solid var(--unnamed-color-eaeaea);
+    border: 1px solid #EAEAEA;
+    border-radius: 5px;
+    opacity: 1;
+    color: #EAEAEA;  
+}
+/* seccion 1 */
+#particles-js{
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    /*background-image: url(/img/Grupo\ 14424.png);*/
+    background-repeat: no-repeat;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.section1{
+    height: 100vh;
+    width: 100%;
+    background: rgba(0, 0, 0, 0);
+    margin-bottom: 10.7vh;
+    position: absolute;
+ }
 .ver_portafolio{
     position: absolute;
     background-color: rgba(0, 0, 255, 0);
@@ -77,15 +154,6 @@ left: 34.66204506065858vh;
     border-radius: 5px;
     opacity: 1;
     color: #EAEAEA;
-}
-.name{
-    width: 31.19584055459272vh;
-    height: 6.065857885615252vh;
-    opacity: 1;
-    color: black;
-    border-radius: 5px 0vh 0vh 5px ;
-    background-image: url(./img/Grupo\ 14423.png);
-    background-repeat: no-repeat;
 }
 .section_tarjet{
     margin-top: -80vh;
@@ -107,16 +175,6 @@ left: 34.66204506065858vh;
     height: 100%;
     width: 40%;
     background-color: rgba(30, 31, 102, 0.26);   
-}
-#particles-js{
-    height: 100vh;
-    width: 100%;
-    position: absolute;
-
-    background-image: linear-gradient(360deg, rgba(24, 2, 102, 0.753), rgb(3, 2, 20) 70.71%),
-    linear-gradient(127deg, rgb(5, 13, 85), rgb(255, 255, 255)70.71%),
-    linear-gradient(336deg, rgba(107, 5, 5, 0.808), rgb(255, 255, 255) 70.71%);
-    
 }
 .section{
     height: 54.11vh;
