--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 *{
     padding: 0%;
     margin: 0%;
-    background: black;
     
 }
 h1{
@@ -105,6 +104,9 @@ margin-left: 3.84204909284952vh;
     position: absolute;
     /*background-image: url(/img/Grupo\ 14424.png);*/
     background-repeat: no-repeat;
+    background: rgb(3,3,28);
+    background: linear-gradient(144deg, rgba(3,3,28,1) 0%, rgba(0,0,0,1) 54%, rgba(21,203,220,1) 88%, rgba(0,255,255,1) 93%, rgba(0,0,0,1) 100%);
+
 }
 
 
