--- a/style.css
+++ b/style.css
@@ -8,19 +8,25 @@ h1{
 color: rgb(255, 255, 255);
 font-size: 4.857rem;
 background: rgba(255, 255, 255, 0);
-position: absolute;
+margin-left: 12.5rem;
+background: rgba(255, 255, 255, 0);
+/*position: absolute;
 top:  29.77588046958378vh;
-left:21.34471718249733vh;
+left:21.34471718249733vh;*/
 }
 h2{
 font-size:2.695rem;
 color: #fff;
 width: 755px;
-height: 177px;
-position: absolute;
+height: auto;
+margin-top: 20px;
+margin-left: 12.5rem;
 background: rgba(255, 255, 255, 0);
+align-items: center;
+/*background: rgba(255, 255, 255, 0);
 top: 39.99359658484525vh;
-left:  21.34471718249733vh
+left:  21.34471718249733vh;
+position: absolute;*/
 }
 i{
 width: 76px;
@@ -30,6 +36,7 @@ color: #EAEAEA;
 font-style: normal;
 margin-right: 3.84204909284952vh;
 margin-left: 3.84204909284952vh;
+
 }
  /* seccion header */
 .header{
@@ -42,8 +49,6 @@ margin-left: 3.84204909284952vh;
     align-items: center;
     display: flex;
     position: fixed;
-    left: 0;
-    top: 0;
     z-index: 99;
     background: rgba(210, 210, 218, 0.192);
 }
@@ -93,16 +98,24 @@ margin-left: 3.84204909284952vh;
     color: #EAEAEA;  
 }
 /* seccion 1 */
+.canvas1{
+display: flex;
+}
+
 #particles-js{
-    height: 102vh;
+    height: 130vh;
     width: 100%;
     background: black;
+    background-image: url("./img/Grupo\ 14424.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    justify-content: center;
 }
 .ver_portafolio{
-    position: absolute;
-    background-color: rgba(0, 0, 255, 0);
+   /* position: absolute;
     top:  55.2273212379936vh;
-    left:  21.34471718249733vh;
+    left:  21.34471718249733vh; */  
+    background-color: rgba(0, 0, 255, 0);
     width: 185px;
     height: 47px;
     border: 1px solid var(--unnamed-color-eaeaea);
@@ -110,19 +123,22 @@ margin-left: 3.84204909284952vh;
     border-radius: 5px;
     opacity: 1;
     color: #EAEAEA;
+    margin-left: 12.5rem;
+    margin-top: 20px;
 }
 .section{
     height: 70vh;
     width: 100%;
-    border-style:none;
+
     background:black;
+    background-color:black;
  }
 .sobre_mi{
     position: absolute;
+    top:  99.86552828175027vh;
+    left: 21.34471718249733vh;   
     color: white;
     font-size: 1.313rem;
-    top:  97.86552828175027vh;
-    left: 21.34471718249733vh;
     width: 50%;
     opacity: 1;
 }
@@ -138,14 +154,15 @@ margin-left: 3.84204909284952vh;
     left: -220px;
 }
 .parrafo{
-    top: 102.66808964781217vh;
+    position: absolute;
+    top:  103.86552828175027vh;
     left: 21.34471718249733vh;
     width: 60.51227321237994vh;
     height: 28.281750266808963vh;
 }
 p{
-    margin-bottom: 1.082rem;
-    margin-left: 21vh;
+    margin-bottom: 1.5rem;
+
     width: 60.51227321237994vh;
     top: 102.66808964781217vh;
     left: 21.34471718249733vh;
@@ -157,10 +174,10 @@ p{
     /*top: 128.66808964781217vh;
     left: 21.34471718249733vh;*/ 
     position: absolute;
-    width: 60.51227321237994vh;
+    width: 40.822rem;
     height: 6.281750266808963vh;
     display: flex;
-    margin-left: 21vh;  
+ 
 }
 .li1{
     margin-right: 3vh;
@@ -170,7 +187,7 @@ li{
     color: white;
 }
 .photo{
-    top:  97.86552828175027vh;
+    top:  100.86552828175027vh;
     left: 120.74003466204505vh;
     width:21.125rem;
     height: 21.125rem;
