--- a/style.css
+++ b/style.css
@@ -103,11 +103,11 @@ display: flex;
 }
 
 #particles-js{
-    height: 130vh;
+    height: 100vh;
     width: 100%;
     background: black;
     background-image: url("./img/Grupo\ 14424.png");
-    background-size: 100%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     justify-content: center;
 }
